--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ attrs==23.2.0
 backoff==2.2.1
 bcrypt==4.1.3
 beautifulsoup4==4.12.3
+boto3==1.34.99
+botocore==1.34.99
 Brotli==1.1.0
 build==1.2.1
 cachetools==5.3.3
@@ -75,6 +77,7 @@ instructor==0.5.2
 ipykernel==6.29.4
 ipython==8.24.0
 jedi==0.19.1
+jmespath==1.0.1
 joblib==1.4.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
@@ -84,6 +87,7 @@ jupyter_core==5.7.2
 kubernetes==29.0.0
 lancedb==0.5.7
 langchain==0.1.17
+langchain-aws==0.1.2
 langchain-community==0.0.37
 langchain-core==0.1.52
 langchain-openai==0.0.5
@@ -172,6 +176,7 @@ requests-oauthlib==2.0.0
 retry==0.9.2
 rich==13.7.1
 rsa==4.9
+s3transfer==0.10.1
 schema==0.7.7
 selenium==4.20.0
 semver==3.0.2
